--- a/src/scss/privacy.scss
+++ b/src/scss/privacy.scss
@@ -1,13 +1,41 @@
 .header_priv {
   background: rgba(18, 19, 31, 0.6);
   border-bottom: 1px solid #ff5b02;
-  max-width: 1200px;
-  width: 100%;
-  height: 68px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding-left: 60px;
+  width: 100%; // Хедер тянется на всю ширину экрана
+}
+// .header_container {
+//   max-width: 1200px; // Ограничение ширины контента
+//   margin: 0 auto;
+//   padding-left: 0; // Без отступов слева
+//   padding-right: 60px; // Отступ справа
+//   display: flex;
+//   justify-content: flex-start;
+//   align-items: center;
+//   @include media(mobile) {
+//    min-width: 320px;
+
+//   }
+// }
+
+.container {
+  max-width: 1200px; // Ограничение для контента
+  margin: 0 auto;
+  padding: 0 60px;
+
+  @include media(mobile) {
+    max-width: $mobile; // 320px
+    padding: 0 8px;
+    margin: 0 auto;
+  }
+
+  @include media(mobileL) {
+    max-width: $mobileL; // 360px
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+}
+.accent_description {
+  font-weight: 500;
 }
 
 .pr_btn {
@@ -17,6 +45,8 @@
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .priv_container {
@@ -26,7 +56,7 @@
 }
 .first {
   background-color: #fffbe6;
-  max-width: 1200px;
+
   width: 100%;
 }
 
@@ -78,6 +108,9 @@
   letter-spacing: 0.01em;
   color: #000;
 }
+.priv_back_descr_t_padding {
+  padding-bottom: 8px;
+}
 
 .priv_desc_list {
   display: flex;
@@ -125,7 +158,6 @@
 
 @include media(mobileL) {
   .header_priv {
-    max-width: 360px;
     padding-left: 16px;
   }
 
@@ -136,7 +168,6 @@
   }
 
   .first {
-    max-width: 360px;
   }
 
   .priv_pri_title {
@@ -177,7 +208,6 @@
 
 @include media(mobile) {
   .header_priv {
-    max-width: 320px;
     padding-left: 16px;
   }
 
@@ -188,7 +218,6 @@
   }
 
   .first {
-    max-width: 320px;
   }
 
   .priv_pri_title {
