--- a/src/scss/term.scss
+++ b/src/scss/term.scss
@@ -1,15 +1,15 @@
 .header_privacy {
   background: rgba(18, 19, 31, 0.6);
   border-bottom: 1px solid #ff5b02;
-  max-width: 1200px;
   width: 100%;
-  height: 68px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding-left: 60px;
 }
-
+.header_container {
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 60px;
+}
 .pr_btn {
   border: none;
   background-color: transparent;
@@ -17,6 +17,8 @@
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .privacy_container {
@@ -27,7 +29,7 @@
 
 .second {
   background-color: #fffbe6;
-  max-width: 1200px;
+
   width: 100%;
 }
 
@@ -128,8 +130,6 @@ footer {
 
 @include media(mobileL) {
   .header_privacy {
-    max-width: 360px;
-    padding-left: 16px;
   }
 
   .privacy_container {
@@ -139,7 +139,6 @@ footer {
   }
 
   .second {
-    max-width: 360px;
   }
 
   .pri_title {
@@ -180,8 +179,6 @@ footer {
 
 @include media(mobile) {
   .header_privacy {
-    max-width: 320px;
-    padding-left: 16px;
   }
 
   .privacy_container {
@@ -191,7 +188,6 @@ footer {
   }
 
   .second {
-    max-width: 320px;
   }
 
   .pri_title {
