--- a/src/scss/privacy.scss
+++ b/src/scss/privacy.scss
@@ -49,6 +49,9 @@
   padding-bottom: 16px;
 }
 
+.pad_bot {
+  padding-bottom: 16px;
+}
 .priv_container {
   padding-top: 80px;
   padding-left: 244px;
@@ -114,7 +117,7 @@
 
 .priv_desc_list {
   display: flex;
-  gap: 20px;
+  gap: 8px;
   flex-direction: column;
   margin-bottom: 32px;
 }
@@ -131,7 +134,7 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.01em;
-  color: #fff;
+  color: #000;
   padding-top: 80px;
   display: flex;
   gap: 32px;
