--- a/src/scss/term.scss
+++ b/src/scss/term.scss
@@ -63,7 +63,9 @@
   margin-top: 32px;
   margin-bottom: 16px;
 }
-
+.term_pad_bot {
+  padding-bottom: 8px;
+}
 .descr_f {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
@@ -86,7 +88,7 @@
 
 .desc_list {
   display: flex;
-  gap: 20px;
+  gap: 8px;
   flex-direction: column;
   margin-bottom: 32px;
 }
@@ -103,7 +105,7 @@ footer {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.01em;
-  color: #fff;
+  color: #000;
   padding-top: 80px;
   display: flex;
   gap: 32px;
