--- a/src/scss/privacy.scss
+++ b/src/scss/privacy.scss
@@ -134,7 +134,7 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.01em;
-  color: #000;
+  color: #fff;
   padding-top: 80px;
   display: flex;
   gap: 32px;
